# social_nav2_experiments

./: README.md
social_nav2_behavior_tree/: CMakeLists.txt  package.xml
social_nav2_behavior_tree/behavior_trees/: social_nav2_bt.xml  social_nav2_escort_bt.xml  social_nav2_hri_bt.xml
social_nav2_behavior_tree/include/social_nav2_behavior_tree/: BTActionNode.hpp
social_nav2_behavior_tree/include/social_nav2_behavior_tree/behavior_tree_nodes/: chrono.hpp  dialog.hpp  navigate_to_wp.hpp  simple_goal_reached_condition.hpp  social_nav2_action.hpp  stop_condition.hpp  turn_agent.hpp  write_csv.hpp
social_nav2_behavior_tree/launch/: social_nav2_experiment_1_launch.py
social_nav2_behavior_tree/src/: social_nav2_hri.cpp
social_nav2_behavior_tree/src/behavior_tree_nodes/: chrono.cpp  dialog.cpp  navigate_to_wp.cpp  simple_goal_reached_condition.cpp  social_nav2_action.cpp  stop_condition.cpp  turn_agent.cpp  write_csv.cpp
social_nav2_exp_bringup/: CMakeLists.txt  package.xml
social_nav2_exp_bringup/launch/: approach_experiment_bt_controller_launch.py  approach_experiment_bt_launch.py  approach_experiment_pddl_controller_launch.py  approach_experiment_pddl_launch.py  approach_sim_launch.py  escort_experiment_bt_launch.py  escort_experiment_launch.py  escort_lu_exp_bringup.py  escort_sim_launch.py  follow_experiment_launch.py  sim_launch.py
social_nav2_exp_bringup/scenarios/: escorting.xml
social_nav2_exp_tools/measuring_tools/: package.xml
social_nav2_exp_tools/measuring_tools/scripts/: asymmetric_gaussian_contour.py
social_nav2_exp_tools/measuring_tools/src/: dummy_tf2_node.cpp  path_pub.cpp
social_nav2_exp_tools/social_nav2_csv/: package.xml  setup.cfg  setup.py
social_nav2_exp_tools/social_nav2_csv/social_nav2_csv/: exp2_topics_2_csv.py  topics_2_csv.py
social_nav2_exp_tools/social_navigation_csv/: package.xml  setup.cfg  setup.py
social_navigation_exp_bringup/: CMakeLists.txt
social_navigation_exp_bringup/launch/: approach_exp_bringup.py  approach_experiment_bt_launch.py  approach_experiment_pddl_controller_launch.py  approach_experiment_pddl_launch.py  approach_sim_launch.py  escort_exp_bringup.py  escort_experiment_bt_controller_launch.py  escort_experiment_launch.py  escort_lu_exp_bringup.py  follow_exp_bringup.py  follow_experiment_launch.py
social_navigation_exp_bringup/scenarios/: approaching.xml  following.xml
social_navigation_exp_tools/measuring_tools/: CMakeLists.txt  package.xml
social_navigation_exp_tools/measuring_tools/include/measuring_tools/: dummy_tf2_node.hpp
social_navigation_exp_tools/measuring_tools/src/: distance_to_agent.cpp  dummy_tf2_node.cpp  path_pub.cpp  robot_cost_pub.cpp
social_navigation_exp_tools/social_navigation_csv/social_navigation_csv/: exp2_plot_csv.py  plot_csv.py  plot_csv_exp2.py  topics_2_csv.py
social_navigation_exp_tools/social_navigation_exp_bringup/: package.xml
social_navigation_exp_tools/social_navigation_exp_bringup/launch/: approach_exp_bringup.py  escort_exp_bringup.py
social_navigation_exp_tools/social_navigation_exp_data/: CMakeLists.txt  package.xml
social_navigation_exp_tools/social_navigation_exp_data/include/social_navigation_exp_data/: social_nav_dummy_tf2_node.hpp
social_navigation_exp_tools/social_navigation_exp_data/scripts/: asymmetric_gaussian_contour.py
social_navigation_exp_tools/social_navigation_exp_data/src/: distance_to_agent.cpp  path_pub.cpp  robot_cost_pub.cpp  social_nav_dummy_tf2_node.cpp
